# balanceo_datasets

./: .gitignore  ENTREGA_FINAL_COMPLETA.md  GUIA_PRESENTACION.sh  HANDOFF_EJECUTIVO_SPRINT_KPNBODY26.md  README-Datasets.md  README.md  README_STGCN_PIPELINE.md  RESUMEN_ENTREGA_EJECUTIVO.md  auditoria_final.py  buscar_manifest_hagrid.py  ejecutar_flujo_datasets.ipynb  ejecutar_flujo_datasets.ps1  ejecutar_flujo_datasets.sh  entrenar_stgcn.ipynb  entrenar_stgcn.py  extraer_landmarks_hagrid_nuevo.py  fix_manifest_canonico.py  generar_graficas_avanzadas.py  generar_graficas_informe.py  generar_secuencias_hagrid_nuevo.py  handoff.md  limpiar_repo.py  main.py  preparar_entrenamiento.py  preparar_y_entrenar.py  prompt para continuar.md  proyecto_stgcn_resumen.md  pyproject.toml  st_gcn_dataloader.py  train_stgcn_attention.py  train_stgcn_simple.py  training_log.txt  training_log_final.txt  training_log_unbuffered.txt  training_stgcn_clean_log.txt  training_stgcn_log.txt  training_stgcn_v4_log.txt  unificar_datasets_y_split.py
.github/: copilot-instructions.md
colab/: entrenar_stgcn_colab.ipynb
csv/: README.md  freihand_landmarks_mapping.json  hagrid_landmarks_mapping.json  hagrid_landmarks_quality.json  mst_freihand_real_images.csv  mst_hagrid_real_images.csv  mst_imagenes_reales_hagrid_no_gesture.csv  mst_mock.csv  mst_real_dataset.csv  mst_real_dataset_actualizado.csv  mst_real_dataset_actualizado_debug.csv  mst_real_dataset_debug.csv  mst_real_dataset_freihand.csv  resumen_balanceo_freihand_hagrid_activo.json  resumen_balanceo_freihand_hagrid_activo_suave.json  (+15 more)
(+304 files in other folders)
