[project]
name = "balanceo-datasets"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chumpy>=0.70",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "kaggle>=2.0.1",
    "matplotlib>=3.10.8",
    "mediapipe>=0.10.33",
    "plotly>=6.7.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "smplx>=0.1.28",
    "torch>=2.11.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
